--- a/Final_Project.ipynb
+++ b/Final_Project.ipynb
@@ -639,11 +639,11 @@
         "    return emj_regex.sub(r'', string)"
       ],
       "metadata": {
-        "id": "vC5fNUVLciwP",
-        "outputId": "d57d598c-ca28-4ee6-c10f-fc70f0178f4e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vC5fNUVLciwP",
+        "outputId": "d57d598c-ca28-4ee6-c10f-fc70f0178f4e"
       },
       "execution_count": 15,
       "outputs": [
@@ -692,12 +692,12 @@
         "extracted_texts.head(5)"
       ],
       "metadata": {
-        "id": "R0Zk9zDSctG5",
-        "outputId": "6c622291-5dc4-4119-ebb2-a8feb68987b9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 345
-        }
+        },
+        "id": "R0Zk9zDSctG5",
+        "outputId": "6c622291-5dc4-4119-ebb2-a8feb68987b9"
       },
       "execution_count": 16,
       "outputs": [
@@ -1518,6 +1518,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "lgmwuG67aWai",
         "outputId": "fb45f719-054c-4620-fc64-22851e301bcf"
       },
@@ -6568,12 +6569,12 @@
         "\n"
       ],
       "metadata": {
-        "id": "mN5VRUWXdqkg",
-        "outputId": "5e82dc9a-67ae-4cce-d938-99a3226242aa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 822
-        }
+        },
+        "id": "mN5VRUWXdqkg",
+        "outputId": "5e82dc9a-67ae-4cce-d938-99a3226242aa"
       },
       "execution_count": 25,
       "outputs": [
@@ -6899,12 +6900,12 @@
         "plt.show() # Display the plot using plt"
       ],
       "metadata": {
-        "id": "rOk30KU7e7QN",
-        "outputId": "b0a074a6-d2ed-4f79-ee40-9f45cb19a4e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 535
-        }
+        },
+        "id": "rOk30KU7e7QN",
+        "outputId": "b0a074a6-d2ed-4f79-ee40-9f45cb19a4e7"
       },
       "execution_count": 29,
       "outputs": [
@@ -7120,12 +7121,12 @@
         "plt.show()  # Use plt instead of instance_plot"
       ],
       "metadata": {
-        "id": "xcJsmcZ_iv7A",
-        "outputId": "b6309f07-44e4-4c31-f3c5-957cfe310c3e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 564
-        }
+        },
+        "id": "xcJsmcZ_iv7A",
+        "outputId": "b6309f07-44e4-4c31-f3c5-957cfe310c3e"
       },
       "execution_count": 36,
       "outputs": [
@@ -7151,12 +7152,12 @@
         "sentiment[np.around(model.predict(pred_pad_sqnc), decimals=0).argmax(axis=1)[0]]"
       ],
       "metadata": {
-        "id": "k1pA1BqZi9nt",
-        "outputId": "06ee02a5-77fd-48d9-9ff8-94d512c5d57e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 53
-        }
+        },
+        "id": "k1pA1BqZi9nt",
+        "outputId": "06ee02a5-77fd-48d9-9ff8-94d512c5d57e"
       },
       "execution_count": 37,
       "outputs": [
@@ -7191,12 +7192,12 @@
         "sentiment[np.around(model.predict(pred_pad_sqnc), decimals=0).argmax(axis=1)[0]]"
       ],
       "metadata": {
-        "id": "hjUsHxVVi9rB",
-        "outputId": "88664ddb-92a9-4b25-df12-efc19003c280",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 53
-        }
+        },
+        "id": "hjUsHxVVi9rB",
+        "outputId": "88664ddb-92a9-4b25-df12-efc19003c280"
       },
       "execution_count": 38,
       "outputs": [
@@ -7254,11 +7255,11 @@
         "print(\"Classification Report:\\n\", classification_report(y_test_dt, dt_test_predictions, target_names=sentiment))"
       ],
       "metadata": {
-        "id": "yXUsk56zi9uN",
-        "outputId": "11a528d4-c45f-4b07-c28c-8b87ec026483",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yXUsk56zi9uN",
+        "outputId": "11a528d4-c45f-4b07-c28c-8b87ec026483"
       },
       "execution_count": 39,
       "outputs": [
@@ -7316,12 +7317,12 @@
         "plt.show() # Use plt instead of instance_plot"
       ],
       "metadata": {
-        "id": "0OCEOOELjS7E",
-        "outputId": "729bb36f-8245-446b-84d3-22ad8d9fd010",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 581
-        }
+        },
+        "id": "0OCEOOELjS7E",
+        "outputId": "729bb36f-8245-446b-84d3-22ad8d9fd010"
       },
       "execution_count": 41,
       "outputs": [
@@ -7384,11 +7385,11 @@
         "print(predict_sentiment_dt('The planned shipment of #PfizerBiontech #vaccine to Bulgaria was postponed due to bad weather in #Germany, authorit… https://t.co/tCwTk56wfM'))"
       ],
       "metadata": {
-        "id": "jPZpsv5op7-B",
-        "outputId": "5151554b-48de-4c67-e87d-5bddb2e8c3c9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jPZpsv5op7-B",
+        "outputId": "5151554b-48de-4c67-e87d-5bddb2e8c3c9"
       },
       "execution_count": 43,
       "outputs": [
@@ -7407,11 +7408,11 @@
         "print(predict_sentiment_dt('Oh this been the best explanation for the vaccine and our immune response #PfizerBioNTech #Moderna https://t.co/4lwGIWBjKM'))"
       ],
       "metadata": {
-        "id": "ewaTF1Tfp8HX",
-        "outputId": "2e518821-e708-4873-82e8-2efa375c6404",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ewaTF1Tfp8HX",
+        "outputId": "2e518821-e708-4873-82e8-2efa375c6404"
       },
       "execution_count": 44,
       "outputs": [
